2003-02-20	Till Straumann <strauman@slac.stanford.edu>

	PR 349/bsps
	* openpic/Makefile.am, pci/Makefile.am:
	  - install the 'openpic.h' and 'pci.h' headers 
	  - avoid a name clash by renaming 'vsprintf' & friends
	    to 'k_vsprintf' etc.
	  - let 'rtemsReboot' print a stack trace (in case an 'assert' failed)
	  - irq.c:
	     * fix: remove implicit assumption that ISA interrupt vectors start
	            at 0
	     * add BSP hook to let a VME interrupt acknowledge the PCI/openpic
	       IRQ. (SEE ALSO THE ppc-sharedbsp-vme.diff patch)
	  - fix: EABI compliance; isr/exception lowlevel handlers must not
	         clobber R2 or R13
	  - fix: openpic_init was called with the polarity/senses tables
	         swapped (fixed wrong order of arguments)
	  - cosmetics: use new _read_SPRXX() _write_SPRXX() macros

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-01-20	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds*: Add FreeBSD sysctl() sections.

2002-12-08      Greg Menke <gregory.menke@gsfc.nasa.gov>
  
	* startup/linkcmds: Shifted .init, .fini to match better with
	crtbegin/crtend linking.

2002-12-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bootloader/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* clock/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* console/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* irq/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* motorola/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* openpic/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* pci/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* residual/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* start/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* startup/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* vectors/Makefile.am: Don't include @RTEMS_BSP@.cfg.

2002-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
