@@ -7,7 +7,7 @@ ACLOCAL_AMFLAGS = -I ../../../../../../aclocal
 # wrapup is the one that actually builds and installs the library
 #  from the individual .rel files built in other directories
 SUBDIRS = include clock console pci residual openpic irq vectors start \
-    startup bootloader motorola @exceptions@ wrapup
+    startup bootloader motorola @exceptions@ vme wrapup
 
 include $(top_srcdir)/../../bsp.am
 
